pkg/sql/parser/sql.output

state 0
	$accept: .stmt_block $end 

	IDENT  shift 14
	SELECT  shift 12
	'('  shift 9
	.  error

	stmt_block  goto 1
	stmt  goto 2
	select_stmt  goto 3
	relation  goto 4
	join_clause  goto 6
	union_clause  goto 7
	select_clause  goto 11
	simple_select  goto 8
	name  goto 13
	table_name  goto 5
	column_name  goto 10

state 1
	$accept:  stmt_block.$end 

	$end  accept
	.  error


state 2
	stmt_block:  stmt.    (1)

	.  reduce 1 (src line 325)


state 3
	stmt:  select_stmt.    (2)

	.  reduce 2 (src line 327)


state 4
	select_stmt:  relation.opt_order_clause opt_fetch_clause 
	select_clause:  relation.    (110)
	opt_order_clause: .    (5)

	$end  reduce 5 (src line 341)
	FTOP  shift 19
	FETCH  reduce 5 (src line 341)
	OFFSET  reduce 5 (src line 341)
	ORDER  shift 17
	TOP  shift 18
	')'  reduce 5 (src line 341)
	.  reduce 110 (src line 636)

	order_clause  goto 16
	opt_order_clause  goto 15

state 5
	relation:  table_name.opt_alias_clause 
	opt_alias_clause: .    (108)

	IDENT  shift 14
	AS  shift 22
	.  reduce 108 (src line 629)

	name  goto 24
	table_alias_name  goto 23
	alias_clause  goto 21
	opt_alias_clause  goto 20

state 6
	relation:  join_clause.    (32)

	.  reduce 32 (src line 422)


state 7
	relation:  union_clause.    (33)

	.  reduce 33 (src line 423)


state 8
	relation:  simple_select.    (34)

	.  reduce 34 (src line 424)


state 9
	relation:  '('.select_stmt ')' opt_alias_clause 

	IDENT  shift 14
	SELECT  shift 12
	'('  shift 9
	.  error

	select_stmt  goto 25
	relation  goto 4
	join_clause  goto 6
	union_clause  goto 7
	select_clause  goto 11
	simple_select  goto 8
	name  goto 13
	table_name  goto 5
	column_name  goto 10

state 10
	table_name:  column_name.    (130)
	column_name:  column_name.'.' name 
	column_name:  column_name.'.' name '[' a_expr ']' 

	'.'  shift 26
	.  reduce 130 (src line 740)


state 11
	union_clause:  select_clause.UNION all_or_distinct select_clause 
	union_clause:  select_clause.INTERSECT all_or_distinct select_clause 
	union_clause:  select_clause.EXCEPT all_or_distinct select_clause 
	join_clause:  select_clause.CROSS JOIN select_clause 
	join_clause:  select_clause.join_type JOIN select_clause join_qual 
	join_clause:  select_clause.JOIN select_clause join_qual 
	join_clause:  select_clause.NATURAL JOIN select_clause 

	CROSS  shift 30
	EXCEPT  shift 29
	FULL  shift 34
	INNER  shift 37
	INTERSECT  shift 28
	JOIN  shift 32
	NATURAL  shift 33
	RIGHT  shift 36
	UNION  shift 27
	LEFT  shift 35
	.  error

	join_type  goto 31

state 12
	simple_select:  SELECT.target_list from_clause opt_where_clause group_clause having_clause 
	simple_select:  SELECT.distinct_clause target_list from_clause opt_where_clause group_clause having_clause 

	IDENT  shift 14
	ICONST  shift 53
	FCONST  shift 54
	SCONST  shift 55
	CAST  shift 64
	DISTINCT  shift 41
	EXISTS  shift 47
	FALSE  shift 57
	NOT  shift 45
	NULL  shift 58
	TRUE  shift 56
	'+'  shift 50
	'-'  shift 51
	'*'  shift 43
	'('  shift 59
	.  error

	name  goto 60
	func_name  goto 63
	column_name  goto 49
	distinct_clause  goto 39
	target_list  goto 38
	a_expr  goto 42
	b_expr  goto 46
	c_expr  goto 44
	d_expr  goto 48
	target_elem  goto 40
	func_application  goto 61
	func_expr_common_subexpr  goto 62
	func_expr  goto 52

state 13
	column_name:  name.    (131)
	column_name:  name.'[' a_expr ']' 

	'['  shift 65
	.  reduce 131 (src line 747)


state 14
	name:  IDENT.    (139)

	.  reduce 139 (src line 779)


state 15
	select_stmt:  relation opt_order_clause.opt_fetch_clause 
	opt_fetch_clause: .    (16)

	FETCH  shift 70
	OFFSET  shift 71
	.  reduce 16 (src line 370)

	fetch_clause  goto 67
	opt_fetch_clause  goto 66
	limit_clause  goto 68
	offset_clause  goto 69

state 16
	opt_order_clause:  order_clause.    (4)

	.  reduce 4 (src line 340)


state 17
	order_clause:  ORDER.BY order_list 

	BY  shift 72
	.  error


state 18
	order_clause:  TOP.a_expr 

	IDENT  shift 14
	ICONST  shift 53
	FCONST  shift 54
	SCONST  shift 55
	CAST  shift 64
	EXISTS  shift 47
	FALSE  shift 57
	NOT  shift 45
	NULL  shift 58
	TRUE  shift 56
	'+'  shift 50
	'-'  shift 51
	'('  shift 59
	.  error

	name  goto 60
	func_name  goto 63
	column_name  goto 49
	a_expr  goto 73
	b_expr  goto 46
	c_expr  goto 44
	d_expr  goto 48
	func_application  goto 61
	func_expr_common_subexpr  goto 62
	func_expr  goto 52

state 19
	order_clause:  FTOP.a_expr 

	IDENT  shift 14
	ICONST  shift 53
	FCONST  shift 54
	SCONST  shift 55
	CAST  shift 64
	EXISTS  shift 47
	FALSE  shift 57
	NOT  shift 45
	NULL  shift 58
	TRUE  shift 56
	'+'  shift 50
	'-'  shift 51
	'('  shift 59
	.  error

	name  goto 60
	func_name  goto 63
	column_name  goto 49
	a_expr  goto 74
	b_expr  goto 46
	c_expr  goto 44
	d_expr  goto 48
	func_application  goto 61
	func_expr_common_subexpr  goto 62
	func_expr  goto 52

state 20
	relation:  table_name opt_alias_clause.    (31)

	.  reduce 31 (src line 417)


state 21
	opt_alias_clause:  alias_clause.    (107)

	.  reduce 107 (src line 628)


state 22
	alias_clause:  AS.table_alias_name opt_column_list 

	IDENT  shift 14
	.  error

	name  goto 24
	table_alias_name  goto 75

state 23
	alias_clause:  table_alias_name.opt_column_list 
	opt_column_list: .    (136)

	'('  shift 77
	.  reduce 136 (src line 766)

	opt_column_list  goto 76

state 24
	table_alias_name:  name.    (142)

	.  reduce 142 (src line 785)


state 25
	relation:  '(' select_stmt.')' opt_alias_clause 

	')'  shift 78
	.  error


state 26
	column_name:  column_name '.'.name 
	column_name:  column_name '.'.name '[' a_expr ']' 

	IDENT  shift 14
	.  error

	name  goto 79

state 27
	union_clause:  select_clause UNION.all_or_distinct select_clause 
	all_or_distinct: .    (116)

	ALL  shift 81
	DISTINCT  shift 82
	.  reduce 116 (src line 670)

	all_or_distinct  goto 80

state 28
	union_clause:  select_clause INTERSECT.all_or_distinct select_clause 
	all_or_distinct: .    (116)

	ALL  shift 81
	DISTINCT  shift 82
	.  reduce 116 (src line 670)

	all_or_distinct  goto 83

state 29
	union_clause:  select_clause EXCEPT.all_or_distinct select_clause 
	all_or_distinct: .    (116)

	ALL  shift 81
	DISTINCT  shift 82
	.  reduce 116 (src line 670)

	all_or_distinct  goto 84

state 30
	join_clause:  select_clause CROSS.JOIN select_clause 

	JOIN  shift 85
	.  error


state 31
	join_clause:  select_clause join_type.JOIN select_clause join_qual 

	JOIN  shift 86
	.  error


state 32
	join_clause:  select_clause JOIN.select_clause join_qual 

	IDENT  shift 14
	SELECT  shift 12
	'('  shift 9
	.  error

	relation  goto 88
	join_clause  goto 6
	union_clause  goto 7
	select_clause  goto 87
	simple_select  goto 8
	name  goto 13
	table_name  goto 5
	column_name  goto 10

state 33
	join_clause:  select_clause NATURAL.JOIN select_clause 

	JOIN  shift 89
	.  error


state 34
	join_type:  FULL.join_outer 
	join_outer: .    (127)

	OUTER  shift 91
	.  reduce 127 (src line 719)

	join_outer  goto 90

state 35
	join_type:  LEFT.join_outer 
	join_outer: .    (127)

	OUTER  shift 91
	.  reduce 127 (src line 719)

	join_outer  goto 92

state 36
	join_type:  RIGHT.join_outer 
	join_outer: .    (127)

	OUTER  shift 91
	.  reduce 127 (src line 719)

	join_outer  goto 93

state 37
	join_type:  INNER.    (125)

	.  reduce 125 (src line 716)


state 38
	simple_select:  SELECT target_list.from_clause opt_where_clause group_clause having_clause 
	target_list:  target_list.',' target_elem 
	from_clause: .    (46)

	FROM  shift 96
	','  shift 95
	.  reduce 46 (src line 501)

	from_clause  goto 94

state 39
	simple_select:  SELECT distinct_clause.target_list from_clause opt_where_clause group_clause having_clause 

	IDENT  shift 14
	ICONST  shift 53
	FCONST  shift 54
	SCONST  shift 55
	CAST  shift 64
	EXISTS  shift 47
	FALSE  shift 57
	NOT  shift 45
	NULL  shift 58
	TRUE  shift 56
	'+'  shift 50
	'-'  shift 51
	'*'  shift 43
	'('  shift 59
	.  error

	name  goto 60
	func_name  goto 63
	column_name  goto 49
	target_list  goto 97
	a_expr  goto 42
	b_expr  goto 46
	c_expr  goto 44
	d_expr  goto 48
	target_elem  goto 40
	func_application  goto 61
	func_expr_common_subexpr  goto 62
	func_expr  goto 52

state 40
	target_list:  target_elem.    (39)

	.  reduce 39 (src line 461)


state 41
	distinct_clause:  DISTINCT.    (38)

	.  reduce 38 (src line 457)


state 42
	target_elem:  a_expr.    (41)
	target_elem:  a_expr.target_name 
	target_elem:  a_expr.AS target_name 
	a_expr:  a_expr.OR a_expr 
	a_expr:  a_expr.AND a_expr 
	a_expr:  a_expr.IS NULL 
	a_expr:  a_expr.IS NOT NULL 

	IDENT  shift 14
	AND  shift 101
	AS  shift 99
	IS  shift 102
	OR  shift 100
	.  reduce 41 (src line 478)

	name  goto 103
	target_name  goto 98

state 43
	target_elem:  '*'.    (44)

	.  reduce 44 (src line 490)


state 44
	a_expr:  c_expr.    (58)

	.  reduce 58 (src line 540)


state 45
	a_expr:  NOT.a_expr 

	IDENT  shift 14
	ICONST  shift 53
	FCONST  shift 54
	SCONST  shift 55
	CAST  shift 64
	EXISTS  shift 47
	FALSE  shift 57
	NOT  shift 45
	NULL  shift 58
	TRUE  shift 56
	'+'  shift 50
	'-'  shift 51
	'('  shift 59
	.  error

	name  goto 60
	func_name  goto 63
	column_name  goto 49
	a_expr  goto 104
	b_expr  goto 46
	c_expr  goto 44
	d_expr  goto 48
	func_application  goto 61
	func_expr_common_subexpr  goto 62
	func_expr  goto 52

state 46
	a_expr:  b_expr.    (64)
	b_expr:  b_expr.'+' b_expr 
	b_expr:  b_expr.'-' b_expr 
	b_expr:  b_expr.'*' b_expr 
	b_expr:  b_expr.'/' b_expr 
	b_expr:  b_expr.'%' b_expr 
	c_expr:  b_expr.'<' b_expr 
	c_expr:  b_expr.'>' b_expr 
	c_expr:  b_expr.'=' b_expr 
	c_expr:  b_expr.LESS_EQUALS b_expr 
	c_expr:  b_expr.GREATER_EQUALS b_expr 
	c_expr:  b_expr.NOT_EQUALS b_expr 
	c_expr:  b_expr.BETWEEN b_expr AND b_expr 
	c_expr:  b_expr.NOT_LA BETWEEN b_expr AND b_expr 

	LESS_EQUALS  shift 113
	GREATER_EQUALS  shift 114
	NOT_EQUALS  shift 115
	BETWEEN  shift 116
	NOT_LA  shift 117
	'+'  shift 105
	'-'  shift 106
	'*'  shift 107
	'/'  shift 108
	'%'  shift 109
	'<'  shift 110
	'>'  shift 111
	'='  shift 112
	.  reduce 64 (src line 546)


state 47
	c_expr:  EXISTS.subquery 

	'('  shift 119
	.  error

	subquery  goto 118

state 48
	b_expr:  d_expr.    (65)

	.  reduce 65 (src line 548)


state 49
	b_expr:  column_name.    (66)
	column_name:  column_name.'.' name 
	column_name:  column_name.'.' name '[' a_expr ']' 

	'.'  shift 26
	.  reduce 66 (src line 549)


state 50
	b_expr:  '+'.b_expr 

	IDENT  shift 14
	ICONST  shift 53
	FCONST  shift 54
	SCONST  shift 55
	CAST  shift 64
	FALSE  shift 57
	NULL  shift 58
	TRUE  shift 56
	'+'  shift 50
	'-'  shift 51
	'('  shift 59
	.  error

	name  goto 60
	func_name  goto 63
	column_name  goto 49
	b_expr  goto 120
	d_expr  goto 48
	func_application  goto 61
	func_expr_common_subexpr  goto 62
	func_expr  goto 52

state 51
	b_expr:  '-'.b_expr 

	IDENT  shift 14
	ICONST  shift 53
	FCONST  shift 54
	SCONST  shift 55
	CAST  shift 64
	FALSE  shift 57
	NULL  shift 58
	TRUE  shift 56
	'+'  shift 50
	'-'  shift 51
	'('  shift 59
	.  error

	name  goto 60
	func_name  goto 63
	column_name  goto 49
	b_expr  goto 121
	d_expr  goto 48
	func_application  goto 61
	func_expr_common_subexpr  goto 62
	func_expr  goto 52

state 52
	b_expr:  func_expr.    (74)

	.  reduce 74 (src line 557)


state 53
	d_expr:  ICONST.    (84)

	.  reduce 84 (src line 572)


state 54
	d_expr:  FCONST.    (85)

	.  reduce 85 (src line 573)


state 55
	d_expr:  SCONST.    (86)

	.  reduce 86 (src line 574)


state 56
	d_expr:  TRUE.    (87)

	.  reduce 87 (src line 575)


state 57
	d_expr:  FALSE.    (88)

	.  reduce 88 (src line 576)


state 58
	d_expr:  NULL.    (89)

	.  reduce 89 (src line 577)


state 59
	d_expr:  '('.a_expr ')' 

	IDENT  shift 14
	ICONST  shift 53
	FCONST  shift 54
	SCONST  shift 55
	CAST  shift 64
	EXISTS  shift 47
	FALSE  shift 57
	NOT  shift 45
	NULL  shift 58
	TRUE  shift 56
	'+'  shift 50
	'-'  shift 51
	'('  shift 59
	.  error

	name  goto 60
	func_name  goto 63
	column_name  goto 49
	a_expr  goto 122
	b_expr  goto 46
	c_expr  goto 44
	d_expr  goto 48
	func_application  goto 61
	func_expr_common_subexpr  goto 62
	func_expr  goto 52

state 60
	column_name:  name.    (131)
	column_name:  name.'[' a_expr ']' 
	func_name:  name.    (140)

	'['  shift 65
	'('  reduce 140 (src line 781)
	.  reduce 131 (src line 747)


state 61
	func_expr:  func_application.    (94)

	.  reduce 94 (src line 586)


state 62
	func_expr:  func_expr_common_subexpr.    (95)

	.  reduce 95 (src line 590)


state 63
	func_application:  func_name.'(' ')' 
	func_application:  func_name.'(' expr_list ')' 

	'('  shift 123
	.  error


state 64
	func_expr_common_subexpr:  CAST.'(' a_expr AS cast_target ')' 

	'('  shift 124
	.  error


state 65
	column_name:  name '['.a_expr ']' 

	IDENT  shift 14
	ICONST  shift 53
	FCONST  shift 54
	SCONST  shift 55
	CAST  shift 64
	EXISTS  shift 47
	FALSE  shift 57
	NOT  shift 45
	NULL  shift 58
	TRUE  shift 56
	'+'  shift 50
	'-'  shift 51
	'('  shift 59
	.  error

	name  goto 60
	func_name  goto 63
	column_name  goto 49
	a_expr  goto 125
	b_expr  goto 46
	c_expr  goto 44
	d_expr  goto 48
	func_application  goto 61
	func_expr_common_subexpr  goto 62
	func_expr  goto 52

state 66
	select_stmt:  relation opt_order_clause opt_fetch_clause.    (3)

	.  reduce 3 (src line 329)


state 67
	opt_fetch_clause:  fetch_clause.    (15)

	.  reduce 15 (src line 369)


state 68
	fetch_clause:  limit_clause.offset_clause 
	fetch_clause:  limit_clause.    (19)

	OFFSET  shift 71
	.  reduce 19 (src line 388)

	offset_clause  goto 126

state 69
	fetch_clause:  offset_clause.limit_clause 
	fetch_clause:  offset_clause.    (20)

	FETCH  shift 70
	.  reduce 20 (src line 392)

	limit_clause  goto 127

state 70
	limit_clause:  FETCH.first_or_next opt_select_fetch_first_value row_or_rows ONLY 

	FIRST  shift 129
	NEXT  shift 130
	.  error

	first_or_next  goto 128

state 71
	offset_clause:  OFFSET.a_expr 
	offset_clause:  OFFSET.d_expr row_or_rows 

	IDENT  shift 14
	ICONST  shift 53
	FCONST  shift 54
	SCONST  shift 55
	CAST  shift 64
	EXISTS  shift 47
	FALSE  shift 57
	NOT  shift 45
	NULL  shift 58
	TRUE  shift 56
	'+'  shift 50
	'-'  shift 51
	'('  shift 59
	.  error

	name  goto 60
	func_name  goto 63
	column_name  goto 49
	a_expr  goto 131
	b_expr  goto 46
	c_expr  goto 44
	d_expr  goto 132
	func_application  goto 61
	func_expr_common_subexpr  goto 62
	func_expr  goto 52

state 72
	order_clause:  ORDER BY.order_list 

	IDENT  shift 14
	ICONST  shift 53
	FCONST  shift 54
	SCONST  shift 55
	CAST  shift 64
	EXISTS  shift 47
	FALSE  shift 57
	NOT  shift 45
	NULL  shift 58
	TRUE  shift 56
	'+'  shift 50
	'-'  shift 51
	'('  shift 59
	.  error

	name  goto 60
	func_name  goto 63
	column_name  goto 49
	order_list  goto 133
	a_expr  goto 135
	b_expr  goto 46
	c_expr  goto 44
	d_expr  goto 48
	order  goto 134
	func_application  goto 61
	func_expr_common_subexpr  goto 62
	func_expr  goto 52

state 73
	order_clause:  TOP a_expr.    (7)
	a_expr:  a_expr.OR a_expr 
	a_expr:  a_expr.AND a_expr 
	a_expr:  a_expr.IS NULL 
	a_expr:  a_expr.IS NOT NULL 

	AND  shift 101
	IS  shift 102
	OR  shift 100
	.  reduce 7 (src line 344)


state 74
	order_clause:  FTOP a_expr.    (8)
	a_expr:  a_expr.OR a_expr 
	a_expr:  a_expr.AND a_expr 
	a_expr:  a_expr.IS NULL 
	a_expr:  a_expr.IS NOT NULL 

	AND  shift 101
	IS  shift 102
	OR  shift 100
	.  reduce 8 (src line 348)


state 75
	alias_clause:  AS table_alias_name.opt_column_list 
	opt_column_list: .    (136)

	'('  shift 77
	.  reduce 136 (src line 766)

	opt_column_list  goto 136

state 76
	alias_clause:  table_alias_name opt_column_list.    (106)

	.  reduce 106 (src line 623)


state 77
	opt_column_list:  '('.name_list ')' 

	IDENT  shift 14
	.  error

	name  goto 138
	name_list  goto 137

state 78
	relation:  '(' select_stmt ')'.opt_alias_clause 
	opt_alias_clause: .    (108)

	IDENT  shift 14
	AS  shift 22
	.  reduce 108 (src line 629)

	name  goto 24
	table_alias_name  goto 23
	alias_clause  goto 21
	opt_alias_clause  goto 139

state 79
	column_name:  column_name '.' name.    (133)
	column_name:  column_name '.' name.'[' a_expr ']' 

	'['  shift 140
	.  reduce 133 (src line 755)


state 80
	union_clause:  select_clause UNION all_or_distinct.select_clause 

	IDENT  shift 14
	SELECT  shift 12
	'('  shift 9
	.  error

	relation  goto 88
	join_clause  goto 6
	union_clause  goto 7
	select_clause  goto 141
	simple_select  goto 8
	name  goto 13
	table_name  goto 5
	column_name  goto 10

state 81
	all_or_distinct:  ALL.    (114)

	.  reduce 114 (src line 668)


state 82
	all_or_distinct:  DISTINCT.    (115)

	.  reduce 115 (src line 669)


state 83
	union_clause:  select_clause INTERSECT all_or_distinct.select_clause 

	IDENT  shift 14
	SELECT  shift 12
	'('  shift 9
	.  error

	relation  goto 88
	join_clause  goto 6
	union_clause  goto 7
	select_clause  goto 142
	simple_select  goto 8
	name  goto 13
	table_name  goto 5
	column_name  goto 10

state 84
	union_clause:  select_clause EXCEPT all_or_distinct.select_clause 

	IDENT  shift 14
	SELECT  shift 12
	'('  shift 9
	.  error

	relation  goto 88
	join_clause  goto 6
	union_clause  goto 7
	select_clause  goto 143
	simple_select  goto 8
	name  goto 13
	table_name  goto 5
	column_name  goto 10

state 85
	join_clause:  select_clause CROSS JOIN.select_clause 

	IDENT  shift 14
	SELECT  shift 12
	'('  shift 9
	.  error

	relation  goto 88
	join_clause  goto 6
	union_clause  goto 7
	select_clause  goto 144
	simple_select  goto 8
	name  goto 13
	table_name  goto 5
	column_name  goto 10

state 86
	join_clause:  select_clause join_type JOIN.select_clause join_qual 

	IDENT  shift 14
	SELECT  shift 12
	'('  shift 9
	.  error

	relation  goto 88
	join_clause  goto 6
	union_clause  goto 7
	select_clause  goto 145
	simple_select  goto 8
	name  goto 13
	table_name  goto 5
	column_name  goto 10

state 87
	union_clause:  select_clause.UNION all_or_distinct select_clause 
	union_clause:  select_clause.INTERSECT all_or_distinct select_clause 
	union_clause:  select_clause.EXCEPT all_or_distinct select_clause 
	join_clause:  select_clause.CROSS JOIN select_clause 
	join_clause:  select_clause.join_type JOIN select_clause join_qual 
	join_clause:  select_clause.JOIN select_clause join_qual 
	join_clause:  select_clause JOIN select_clause.join_qual 
	join_clause:  select_clause.NATURAL JOIN select_clause 

	CROSS  shift 30
	EXCEPT  shift 29
	FULL  shift 34
	INNER  shift 37
	INTERSECT  shift 28
	JOIN  shift 32
	NATURAL  shift 33
	ON  shift 147
	RIGHT  shift 36
	UNION  shift 27
	LEFT  shift 35
	.  error

	join_qual  goto 146
	join_type  goto 31

state 88
	select_clause:  relation.    (110)

	.  reduce 110 (src line 636)


state 89
	join_clause:  select_clause NATURAL JOIN.select_clause 

	IDENT  shift 14
	SELECT  shift 12
	'('  shift 9
	.  error

	relation  goto 88
	join_clause  goto 6
	union_clause  goto 7
	select_clause  goto 148
	simple_select  goto 8
	name  goto 13
	table_name  goto 5
	column_name  goto 10

state 90
	join_type:  FULL join_outer.    (122)

	.  reduce 122 (src line 713)


state 91
	join_outer:  OUTER.    (126)

	.  reduce 126 (src line 718)


state 92
	join_type:  LEFT join_outer.    (123)

	.  reduce 123 (src line 714)


state 93
	join_type:  RIGHT join_outer.    (124)

	.  reduce 124 (src line 715)


state 94
	simple_select:  SELECT target_list from_clause.opt_where_clause group_clause having_clause 
	opt_where_clause: .    (50)

	WHERE  shift 151
	.  reduce 50 (src line 518)

	where_clause  goto 150
	opt_where_clause  goto 149

state 95
	target_list:  target_list ','.target_elem 

	IDENT  shift 14
	ICONST  shift 53
	FCONST  shift 54
	SCONST  shift 55
	CAST  shift 64
	EXISTS  shift 47
	FALSE  shift 57
	NOT  shift 45
	NULL  shift 58
	TRUE  shift 56
	'+'  shift 50
	'-'  shift 51
	'*'  shift 43
	'('  shift 59
	.  error

	name  goto 60
	func_name  goto 63
	column_name  goto 49
	a_expr  goto 42
	b_expr  goto 46
	c_expr  goto 44
	d_expr  goto 48
	target_elem  goto 152
	func_application  goto 61
	func_expr_common_subexpr  goto 62
	func_expr  goto 52

state 96
	from_clause:  FROM.from_list 

	IDENT  shift 14
	'('  shift 119
	.  error

	subquery  goto 156
	name  goto 13
	table_name  goto 155
	column_name  goto 10
	from_list  goto 153
	table_ref  goto 154

state 97
	simple_select:  SELECT distinct_clause target_list.from_clause opt_where_clause group_clause having_clause 
	target_list:  target_list.',' target_elem 
	from_clause: .    (46)

	FROM  shift 96
	','  shift 95
	.  reduce 46 (src line 501)

	from_clause  goto 157

state 98
	target_elem:  a_expr target_name.    (42)

	.  reduce 42 (src line 482)


state 99
	target_elem:  a_expr AS.target_name 

	IDENT  shift 14
	.  error

	name  goto 103
	target_name  goto 158

state 100
	a_expr:  a_expr OR.a_expr 

	IDENT  shift 14
	ICONST  shift 53
	FCONST  shift 54
	SCONST  shift 55
	CAST  shift 64
	EXISTS  shift 47
	FALSE  shift 57
	NOT  shift 45
	NULL  shift 58
	TRUE  shift 56
	'+'  shift 50
	'-'  shift 51
	'('  shift 59
	.  error

	name  goto 60
	func_name  goto 63
	column_name  goto 49
	a_expr  goto 159
	b_expr  goto 46
	c_expr  goto 44
	d_expr  goto 48
	func_application  goto 61
	func_expr_common_subexpr  goto 62
	func_expr  goto 52

state 101
	a_expr:  a_expr AND.a_expr 

	IDENT  shift 14
	ICONST  shift 53
	FCONST  shift 54
	SCONST  shift 55
	CAST  shift 64
	EXISTS  shift 47
	FALSE  shift 57
	NOT  shift 45
	NULL  shift 58
	TRUE  shift 56
	'+'  shift 50
	'-'  shift 51
	'('  shift 59
	.  error

	name  goto 60
	func_name  goto 63
	column_name  goto 49
	a_expr  goto 160
	b_expr  goto 46
	c_expr  goto 44
	d_expr  goto 48
	func_application  goto 61
	func_expr_common_subexpr  goto 62
	func_expr  goto 52

state 102
	a_expr:  a_expr IS.NULL 
	a_expr:  a_expr IS.NOT NULL 

	NOT  shift 162
	NULL  shift 161
	.  error


state 103
	target_name:  name.    (141)

	.  reduce 141 (src line 783)


state 104
	a_expr:  NOT a_expr.    (59)
	a_expr:  a_expr.OR a_expr 
	a_expr:  a_expr.AND a_expr 
	a_expr:  a_expr.IS NULL 
	a_expr:  a_expr.IS NOT NULL 

	IS  shift 102
	.  reduce 59 (src line 541)


state 105
	b_expr:  b_expr '+'.b_expr 

	IDENT  shift 14
	ICONST  shift 53
	FCONST  shift 54
	SCONST  shift 55
	CAST  shift 64
	FALSE  shift 57
	NULL  shift 58
	TRUE  shift 56
	'+'  shift 50
	'-'  shift 51
	'('  shift 59
	.  error

	name  goto 60
	func_name  goto 63
	column_name  goto 49
	b_expr  goto 163
	d_expr  goto 48
	func_application  goto 61
	func_expr_common_subexpr  goto 62
	func_expr  goto 52

state 106
	b_expr:  b_expr '-'.b_expr 

	IDENT  shift 14
	ICONST  shift 53
	FCONST  shift 54
	SCONST  shift 55
	CAST  shift 64
	FALSE  shift 57
	NULL  shift 58
	TRUE  shift 56
	'+'  shift 50
	'-'  shift 51
	'('  shift 59
	.  error

	name  goto 60
	func_name  goto 63
	column_name  goto 49
	b_expr  goto 164
	d_expr  goto 48
	func_application  goto 61
	func_expr_common_subexpr  goto 62
	func_expr  goto 52

state 107
	b_expr:  b_expr '*'.b_expr 

	IDENT  shift 14
	ICONST  shift 53
	FCONST  shift 54
	SCONST  shift 55
	CAST  shift 64
	FALSE  shift 57
	NULL  shift 58
	TRUE  shift 56
	'+'  shift 50
	'-'  shift 51
	'('  shift 59
	.  error

	name  goto 60
	func_name  goto 63
	column_name  goto 49
	b_expr  goto 165
	d_expr  goto 48
	func_application  goto 61
	func_expr_common_subexpr  goto 62
	func_expr  goto 52

state 108
	b_expr:  b_expr '/'.b_expr 

	IDENT  shift 14
	ICONST  shift 53
	FCONST  shift 54
	SCONST  shift 55
	CAST  shift 64
	FALSE  shift 57
	NULL  shift 58
	TRUE  shift 56
	'+'  shift 50
	'-'  shift 51
	'('  shift 59
	.  error

	name  goto 60
	func_name  goto 63
	column_name  goto 49
	b_expr  goto 166
	d_expr  goto 48
	func_application  goto 61
	func_expr_common_subexpr  goto 62
	func_expr  goto 52

state 109
	b_expr:  b_expr '%'.b_expr 

	IDENT  shift 14
	ICONST  shift 53
	FCONST  shift 54
	SCONST  shift 55
	CAST  shift 64
	FALSE  shift 57
	NULL  shift 58
	TRUE  shift 56
	'+'  shift 50
	'-'  shift 51
	'('  shift 59
	.  error

	name  goto 60
	func_name  goto 63
	column_name  goto 49
	b_expr  goto 167
	d_expr  goto 48
	func_application  goto 61
	func_expr_common_subexpr  goto 62
	func_expr  goto 52

state 110
	c_expr:  b_expr '<'.b_expr 

	IDENT  shift 14
	ICONST  shift 53
	FCONST  shift 54
	SCONST  shift 55
	CAST  shift 64
	FALSE  shift 57
	NULL  shift 58
	TRUE  shift 56
	'+'  shift 50
	'-'  shift 51
	'('  shift 59
	.  error

	name  goto 60
	func_name  goto 63
	column_name  goto 49
	b_expr  goto 168
	d_expr  goto 48
	func_application  goto 61
	func_expr_common_subexpr  goto 62
	func_expr  goto 52

state 111
	c_expr:  b_expr '>'.b_expr 

	IDENT  shift 14
	ICONST  shift 53
	FCONST  shift 54
	SCONST  shift 55
	CAST  shift 64
	FALSE  shift 57
	NULL  shift 58
	TRUE  shift 56
	'+'  shift 50
	'-'  shift 51
	'('  shift 59
	.  error

	name  goto 60
	func_name  goto 63
	column_name  goto 49
	b_expr  goto 169
	d_expr  goto 48
	func_application  goto 61
	func_expr_common_subexpr  goto 62
	func_expr  goto 52

state 112
	c_expr:  b_expr '='.b_expr 

	IDENT  shift 14
	ICONST  shift 53
	FCONST  shift 54
	SCONST  shift 55
	CAST  shift 64
	FALSE  shift 57
	NULL  shift 58
	TRUE  shift 56
	'+'  shift 50
	'-'  shift 51
	'('  shift 59
	.  error

	name  goto 60
	func_name  goto 63
	column_name  goto 49
	b_expr  goto 170
	d_expr  goto 48
	func_application  goto 61
	func_expr_common_subexpr  goto 62
	func_expr  goto 52

state 113
	c_expr:  b_expr LESS_EQUALS.b_expr 

	IDENT  shift 14
	ICONST  shift 53
	FCONST  shift 54
	SCONST  shift 55
	CAST  shift 64
	FALSE  shift 57
	NULL  shift 58
	TRUE  shift 56
	'+'  shift 50
	'-'  shift 51
	'('  shift 59
	.  error

	name  goto 60
	func_name  goto 63
	column_name  goto 49
	b_expr  goto 171
	d_expr  goto 48
	func_application  goto 61
	func_expr_common_subexpr  goto 62
	func_expr  goto 52

state 114
	c_expr:  b_expr GREATER_EQUALS.b_expr 

	IDENT  shift 14
	ICONST  shift 53
	FCONST  shift 54
	SCONST  shift 55
	CAST  shift 64
	FALSE  shift 57
	NULL  shift 58
	TRUE  shift 56
	'+'  shift 50
	'-'  shift 51
	'('  shift 59
	.  error

	name  goto 60
	func_name  goto 63
	column_name  goto 49
	b_expr  goto 172
	d_expr  goto 48
	func_application  goto 61
	func_expr_common_subexpr  goto 62
	func_expr  goto 52

state 115
	c_expr:  b_expr NOT_EQUALS.b_expr 

	IDENT  shift 14
	ICONST  shift 53
	FCONST  shift 54
	SCONST  shift 55
	CAST  shift 64
	FALSE  shift 57
	NULL  shift 58
	TRUE  shift 56
	'+'  shift 50
	'-'  shift 51
	'('  shift 59
	.  error

	name  goto 60
	func_name  goto 63
	column_name  goto 49
	b_expr  goto 173
	d_expr  goto 48
	func_application  goto 61
	func_expr_common_subexpr  goto 62
	func_expr  goto 52

state 116
	c_expr:  b_expr BETWEEN.b_expr AND b_expr 

	IDENT  shift 14
	ICONST  shift 53
	FCONST  shift 54
	SCONST  shift 55
	CAST  shift 64
	FALSE  shift 57
	NULL  shift 58
	TRUE  shift 56
	'+'  shift 50
	'-'  shift 51
	'('  shift 59
	.  error
